Useless commit to enable review app

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -61,6 +61,7 @@
   <% elsif alert %>
     <p class="alert"><%= alert %></p>
   <% end %>
+  <p class="notice">Someone merged a branch they weren't supposed to!</p>
   <%= yield %>
 
 </body>
