Continue building out stalemate...
* Add the methods stalemate, and game_over to Game Model.
* Add the helper method player_can_move? to the Game Model.
* Add a game_result column to the games table in the db.
* Add a game_over_reason column to the games table.
* Rename the CSS class kingInCheckMessage to gameStartMessage so that
it may be repurposed for messages such as Stalemate, Checkmate, etc.
* Adjust switch_players! method within the Piece Model.
* Adjust update.js.erb to display a message in the event of Stalemate.

--- a/app/assets/stylesheets/game.css.scss
+++ b/app/assets/stylesheets/game.css.scss
@@ -215,17 +215,17 @@ $square-size-mobile: 30px;
   padding-bottom: 4%;
 }
 
-.kingInCheckMessage {
+.gameMessage {
   font-size: 1.8em;
   color: #B64402;
   text-shadow: 0px 2px 2px rgb(109, 63, 63), 0px 3px 6px #351B03;
 }
 
 
-$kingInCheckMessage-iphone5: .8em;
+$gameMessage-iphone5: .8em;
 @media (max-width: 760px) {
-  .kingInCheckMessage { 
-  font-size: $kingInCheckMessage-iphone5;
+  .gameMessage { 
+  font-size: $gameMessage-iphone5;
   }
 }
 
