Change normal request from client to server for games#concede action to ajax. Refactor code in games controller and show page

--- a/app/views/games/concede.html.erb
+++ b/app/views/games/concede.html.erb
@@ -1,1 +1,5 @@
-<h1 class="text-center">The game was conceded by <%= @conceding_player %>. </h1>
+<h1 class="text-center">The game was conceded by <%= @conceding_player_id %>. </h1>
+<br />
+conceding player is: <%= @conceding_player_id %>
+<br />
+current user is: <%= current_user.id %>
