--- a/app/views/pieces/update.js.erb
+++ b/app/views/pieces/update.js.erb
@@ -4,60 +4,58 @@ $( ".board-booyah-box" ).html("<%= escape_javascript(render('games/chess_board')
 
 <% if (result = @game.game_result) %>
   <% reason = @game.game_over_reason %>
-  <% if reason == "Stalemate" %>
+  <% if reason == "stalemate" %>
     $( ".warning" ).html( "Stalemate, the game is a draw!" )
                    .addClass( "gameMessage", 1000 )
                    .addClass( "animated bounceInUp" )
                    .animate( { letterSpacing: ".3em" }, 1200 );
+
+  <% elsif reason == "checkmate" %>
+    $( ".warning" ).html( "Checkmate, <%= result %> wins!" )
+                   .addClass( "gameMessage", 1000 )
+                   .addClass( "animated bounceInUp" )
+                   .animate( { letterSpacing: ".3em" }, 1200 );
+  <% end %>
+  
+<% else %>
+  // The following calls the function within master.js and limits 
+  // making pieces draggable and squares droppable to only the player
+  // who has the next move.
+  <% current_player_id = @game.white? ? @game.white_player_id : @game.black_player_id %>
+  <% if current_user.id == current_player_id %>
+    dragDrop();
+  <% end %>
+
+  // Display a message indicating whether it's white or black's turn.
+  <% if @game.white? %>
+    $( ".rank-and-file" ).addClass( "animated fadeIn white-letters", 800 )
+                            .removeClass( "black-letters", "slow" );
+
+    $( ".player-turn" ).html( "current move: white player" )
+                       .addClass( "animated fadeInDown white-player-turn", 1000 );
+  <% elsif @game.black? %>
+    $( ".rank-and-file" ).removeClass( "white-letters", "slow" )
+                            .addClass( "animated fadeIn black-letters", 800 );
+
+    $( ".player-turn" ).html( "current move: black player" )
+                       .addClass( "animated fadeInUp black-player-turn", 1000 );
+  <% end %>
+
+  // Display a warning if the king is in check
+  <% if @game.in_check?('black') %>
+    $( ".warning" ).html( "Hello, black is in check!" )
+                   .addClass( "gameMessage", 1000 )
+                   .addClass( "animated bounceInUp" )
+                   .animate( { letterSpacing: ".3em" }, 1200 );
+   
+    $("#black-king").addClass( "animated bounce blushing-king" );
+
+  <% elsif @game.in_check?('white') %>
+    $( ".warning" ).html( "Hello, white is in check!" )
+                   .addClass( "gameMessage", 1000 )
+                   .addClass( "animated bounceInUp" )
+                   .animate( { letterSpacing: ".3em" }, 1200 );
+
+    $("#white-king").addClass( "animated bounce blushing-king" );
   <% end %>
 <% end %>
-
-
-
-
-
-
-// The following calls the function within master.js and limits 
-// making pieces draggable and squares droppable to only the player
-// who has the next move.
-<% current_player_id = @game.white? ? @game.white_player_id : @game.black_player_id %>
-<% if current_user.id == current_player_id %>
-  dragDrop();
-<% end %>
-
-// Display a message indicating whether it's white or black's turn.
-<% if @game.white? %>
-  $( ".rank-and-file" ).addClass( "animated fadeIn white-letters", 800 )
-                          .removeClass( "black-letters", "slow" );
-
-  $( ".player-turn" ).html( "current move: white player" )
-                     .addClass( "animated fadeInDown white-player-turn", 1000 );
-<% elsif @game.black? %>
-  $( ".rank-and-file" ).removeClass( "white-letters", "slow" )
-                          .addClass( "animated fadeIn black-letters", 800 );
-
-  $( ".player-turn" ).html( "current move: black player" )
-                     .addClass( "animated fadeInUp black-player-turn", 1000 );
-<% end %>
-
-// Display a warning if the king is in check
-<% if @game.in_check?('black') %>
-  $( ".warning" ).html( "Hello, black is in check!" )
-                 .addClass( "gameMessage", 1000 )
-                 .addClass( "animated bounceInUp" )
-                 .animate( { letterSpacing: ".3em" }, 1200 );
- 
-  $("#black-king").addClass( "animated bounce blushing-king" );
-
-<% elsif @game.in_check?('white') %>
-  $( ".warning" ).html( "Hello, white is in check!" )
-                 .addClass( "gameMessage", 1000 )
-                 .addClass( "animated bounceInUp" )
-                 .animate( { letterSpacing: ".3em" }, 1200 );
-
-  $("#white-king").addClass( "animated bounce blushing-king" );
-<% end %>
-
-// The _chess_board partial has a div with the class .warning 
-// .warning may be used in the future to show a message for checkmate
-// much in the same way as above with .addClass
