--- a/app/views/pieces/update.js.erb
+++ b/app/views/pieces/update.js.erb
@@ -3,22 +3,31 @@
 $( ".board-booyah-box" ).html("<%= escape_javascript(render('games/chess_board')) %>");
 
 <% if (result = @game.game_result) %>
-  <% reason = @game.game_over_reason %>
-  <% if reason == "stalemate" %>
+  <% case @game.game_over_reason %>
+  <% when "stalemate" %>
     $( ".warning" ).html( "Stalemate, the game is a draw!" )
                    .addClass( "gameMessage", 1000 )
                    .addClass( "animated bounceInUp" )
                    .animate( { letterSpacing: ".3em" }, 1200 );
 
-  <% elsif reason == "checkmate" %>
+  <% when "checkmate" %>
     $( ".warning" ).html( "Checkmate, <%= result %> wins!" )
                    .addClass( "gameMessage", 1000 )
                    .addClass( "animated bounceInUp" )
                    .animate( { letterSpacing: ".3em" }, 1200 );
+
+    <% loser = result == 'white' ? 'black' : 'white' %>
+    $("#<%= loser %>-king").addClass( "animated bounce blushing-king" );
+
+  <% when "75 move" %>
+    $( ".warning" ).html( "No progress in 75 moves. Draw.")
+                   .addClass( "gameMessage", 1000 )
+                   .addClass( "animated bounceInUp" )
+                   .animate( { letterSpacing: ".3em" }, 1200 );
   <% end %>
-  
+
 <% else %>
-  // The following calls the function within master.js and limits 
+  // The following calls the function within master.js and limits
   // making pieces draggable and squares droppable to only the player
   // who has the next move.
   <% current_player_id = @game.white? ? @game.white_player_id : @game.black_player_id %>
@@ -47,7 +56,7 @@ $( ".board-booyah-box" ).html("<%= escape_javascript(render('games/chess_board')
                    .addClass( "gameMessage", 1000 )
                    .addClass( "animated bounceInUp" )
                    .animate( { letterSpacing: ".3em" }, 1200 );
-   
+
     $("#black-king").addClass( "animated bounce blushing-king" );
 
   <% elsif @game.in_check?('white') %>
