--- a/app/views/games/_chess_board.html.erb
+++ b/app/views/games/_chess_board.html.erb
@@ -20,4 +20,4 @@
 
     <% end %>
   </table>
-<p class="boardTopBottom rank-and-file file-indicator text-center col-xs-12">a b c d e f g h</p>
+<!-- <p class="boardTopBottom rank-and-file file-indicator text-center col-xs-12"></p> -->
