Change link_to syntax for the concede button on the game#show page to pass data to the contgame controller (concede action) about the player that clicked on it

--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -8,8 +8,8 @@
 
 <div class="col-xs-10 col-xs-offset-1">
   <!-- <%= link_to "Concede the Game", {action: "concede", controller: "games"}, method: :patch, class: 'btn btn-primary pull-left' %> -->
-
-  <button class="btn btn-primary concede-btn pull-left"> Concede the Game </button>
+  <%= link_to "Concede the Game", concede_game_path(@game, conceding_one: current_user.id), class: 'btn btn-primary pull-left', remote: true %>
+  <!--<button class="btn btn-primary concede-btn pull-left"> Concede the Game </button>
   <button class="btn btn-primary draw-btn pull-right"> Suggest draw </button>
 </div> 
 
@@ -50,7 +50,7 @@
       $.ajax({
         type: 'PATCH',
         url: <%= @game.id %> + "/concede",
-        data: {current_player_id: <%= current_user.id %>}
+        data: {current_player_id: "123"}
       }); 
     });
 
@@ -79,7 +79,8 @@
    channel.bind('game_conceded', function(data) {
     //when one player concedes the game, both players are redirected to a new page. The setTimeout is necessary for Chrome users (without it the redirect does not occur)
     setTimeout(function(){
-      window.location.href = '<%= @game.id %>' + '/concede';}, 500);
+      //window.location.href = '<%= @game.id %>' + '/concede' +'?conceding_player=' + '<%= @conceding_player %>';}, 500);
+      window.location.href = '<%= @game.id %>' + '/concede' +'?conceding_player=' + data.my_data;}, 500);
     });
 
    channel.bind('draw_requested', function(data) {
