Replace the two boolean columns on the games table that stored the info about which player conceded the game by one column that stores a string, the colour, of the player that conceded it

--- a/app/views/games/concede.html.erb
+++ b/app/views/games/concede.html.erb
@@ -1,5 +1,7 @@
-<h1 class="text-center">The game was conceded by <%= @conceding_player_id %>. </h1>
 <br />
-conceding player is: <%= @conceding_player_id %>
 <br />
-current user is: <%= current_user.id %>
+<% if params[:conceding_player] == current_user.id.to_s %>
+  <h1 class="text-center"> You have conceded the game.</h1>
+<% else %>
+  <h1 class="text-center"> Your opponnent has conceded the game. You have won!</h1>
+<% end %>
