--- a/app/views/games/_chess_board.html.erb
+++ b/app/views/games/_chess_board.html.erb
@@ -1,5 +1,5 @@
-<p class="boardTopBottom"></p>
-<div class="warning text-center">&nbsp</div>
+<p class="board-top text-center">&nbsp</p>
+<!-- <div class="warning text-center">&nbsp</div> -->
   <table id="board">
 
     <% 8.downto(0) do |y| %>
