--- a/app/views/games/_chess_board.html.erb
+++ b/app/views/games/_chess_board.html.erb
@@ -1,23 +1,43 @@
 <p class="board-top text-center">&nbsp</p>
 <!-- <div class="warning text-center">&nbsp</div> -->
-  <table id="board">
+<table id="board">
 
-    <% 8.downto(0) do |y| %>
-      <tr>
-        <% 0.upto(9) do |x| %>
-          <td data-x="<%= x %>" data-y="<%= y %>
-              "class="square<%= add_rank_indicator_class(x) %>
-                            <%= add_file_indicator_class(x, y) %>
-                            <%= add_squash_class(x, y) %>" >
-            <%= game_pieces(@game, x, y) %>
-            <!-- output y for the rank indicator -->
-            <%= y if x == 0 && y != 0 %>
+  <% 8.downto(0) do |y| %>
+    <tr>
+      <% 0.upto(9) do |x| %>
+        <td data-x="<%= x %>" data-y="<%= y %>
+            "class="square<%= add_rank_indicator_class(x) %>
+                          <%= add_file_indicator_class(x, y) %>
+                          <%= add_squash_class(x, y) %>" >
+          <%= game_pieces(@game, x, y) %>
+          <!-- output y for the rank indicator -->
+          <%= y if x == 0 && y != 0 %>
 
-            <%= convert_number_to_file_letter(x, y) %>
-          </td>
-        <% end %>
-      </tr>
+          <%= convert_number_to_file_letter(x, y) %>
+        </td>
+      <% end %>
+    </tr>
 
-    <% end %>
-  </table>
-<!-- <p class="boardTopBottom rank-and-file file-indicator text-center col-xs-12"></p> -->
+  <% end %>
+</table>
+
+<br>
+
+<input id="text" />
+<button id="chat-button">Submit</button>
+
+<script>
+  $(function() {
+    $( '#chat-button' ).click(function() {
+      var message = {
+        "message" : {
+          "text" : $( '#text' ).val()
+        }
+      };
+
+      $.post( "<%= message_url(@game) %>", message, function( data ) {
+        console.log( data );
+      });
+    });
+  });
+</script>
