Enable chat messaging via Pusher
* Add a message method inside the GamesController
* Adjust the games#show page. Add divs, create and respond to a new
message sent via Pusher.
* Adjust routes.rb, and set up a new message route to trigger a
message sent to a specific game
* Add a new partial that encapsulates chat messaging

--- a/app/views/games/_chess_board.html.erb
+++ b/app/views/games/_chess_board.html.erb
@@ -1,4 +1,4 @@
-<p class="board-top text-center">&nbsp</p>
+<p class="board-top text-center">&nbsp;</p>
 <!-- <div class="warning text-center">&nbsp</div> -->
 <table id="board">
 
@@ -22,22 +22,3 @@
 </table>
 
 <br>
-
-<input id="text" />
-<button id="chat-button">Submit</button>
-
-<script>
-  $(function() {
-    $( '#chat-button' ).click(function() {
-      var message = {
-        "message" : {
-          "text" : $( '#text' ).val()
-        }
-      };
-
-      $.post( "<%= message_url(@game) %>", message, function( data ) {
-        console.log( data );
-      });
-    });
-  });
-</script>
